# EVE-Preview-Manager

./: .gitignore  Cargo.toml  README.md  default.nix
.github/workflows/: build.yml  discord-release.yml  flakehub-publish-rolling.yml  flakehub-publish-tagged.yml  flakehub.yml
assets/: com.evepreview.manager.metainfo.xml
src/: color.rs  constants.rs  hotkeys.rs  ipc.rs  main.rs  types.rs  x11_utils.rs
src/common/: color.rs  constants.rs  debug.rs  ipc.rs  mod.rs
src/common/types/: geometry.rs  mod.rs
src/config/: backup.rs  daemon_state.rs  hotkey_binding.rs  mod.rs  profile.rs  runtime.rs  serialization.rs
src/daemon/: cycle_state.rs  dispatcher.rs  main_loop.rs  mod.rs  overlay.rs  renderer.rs  session_state.rs  snapping.rs  thumbnail.rs  window_detection.rs
src/daemon/font/: discovery.rs  mod.rs  rendering.rs
src/daemon/handlers/: input.rs  mod.rs  state.rs  window.rs
src/gui/: key_capture.rs  manager.rs  state.rs  utils.rs
src/gui/components/: behavior_settings.rs  characters.rs  cycle_order_settings.rs  header.rs  hotkey_settings.rs  mod.rs  profile_selector.rs  sources.rs  tray.rs  visual_settings.rs
src/gui/components/characters/: editor.rs  list.rs  mod.rs  modals.rs
src/gui/state/: config.rs  daemon.rs  mod.rs  types.rs
src/input/: backend.rs  device_detection.rs  evdev_backend.rs  listener.rs  mod.rs  x11_backend.rs
src/manager/: app.rs  key_capture.rs  mod.rs  utils.rs  x11_utils.rs
src/manager/components/: behavior_settings.rs  header.rs  hotkey_settings.rs  mod.rs  profile_selector.rs  sources.rs  tray.rs  visual_settings.rs
src/manager/components/characters/: editor.rs  list.rs  mod.rs  modals.rs
src/manager/state/: config.rs  core.rs  daemon.rs  mod.rs  types.rs
src/preview/: cycle_state.rs  daemon.rs  event_handler.rs  font.rs  hotkeys.rs  mod.rs  overlay.rs  renderer.rs  session_state.rs  snapping.rs  thumbnail.rs  window_detection.rs
src/preview/font/: discovery.rs  rendering.rs
src/types/: domain.rs
src/x11/: context.rs  mod.rs  query.rs  window.rs
