[package]
name = "eve-preview-manager"
version = "1.0.0"
edition = "2024"

[profile.release]
lto = true
strip = true
codegen-units = 1

[dependencies]
x11rb = { version = "0.13.2", features = ["composite", "damage", "render", "tracing", "allow-unsafe-code"] }
anyhow = "1.0.100"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0.0"
evdev = "0.13.2"
fontdue = "0.9"
fontconfig = "0.10"
clap = { version = "4.5", features = ["derive"] }

eframe = { version = "0.33.2", default-features = false, features = ["glow", "wayland", "x11"] }
egui = "0.33.2"
ksni = "0.3"  # System tray via D-Bus StatusNotifier
tokio = { version = "1.28", features = ["rt", "macros", "sync"] }  # Async runtime for ksni
png = "0.18.0"  # PNG decoding for tray icon

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"
nix = { version = "0.30.1", features = ["signal"] }
