[package]
name = "eve-preview-manager"
version = "1.6.2"
edition = "2024"

[profile.release]
lto = true
strip = true
codegen-units = 1

[dependencies]
x11rb = { version = "0.13.2", features = ["composite", "damage", "render", "tracing"] }
anyhow = "1.0.100"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0.0"
evdev = "0.13.2"
fontdue = "0.9"
fontconfig = "0.10"
clap = { version = "4.5", features = ["derive"] }
libc = "0.2"

eframe = { version = "0.33.2", default-features = false, features = ["glow", "x11"] }
egui = "0.33.2"
ipc-channel = "0.19"
ksni = "0.3"
tokio = { version = "1.28", features = ["rt", "macros", "sync", "signal"] }
png = "0.18.0"
chrono = "0.4"
flate2 = "1.0"
tar = "0.4"

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"
nix = { version = "0.30.1", features = ["signal"] }

[dev-dependencies]
tempfile = "3.24.0"
